# molbo

./: README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  publish.yml
docs/: index.md
docs/about/: contributing.md  identity.md  installation.md  license.md
docs/usage/: inputs.md  quickstart.md  sharing.md
src/molbo/: __init__.py  __main__.py  cli.py  server.py  viewer.html
tests/: test_molbo.py
