[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "molbo"
version = "0.1.1"
description = "Inspect PDB/CIF molecular structures from the command line"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "molbo contributors" }]
keywords = ["molecular", "structure", "pdb", "cif", "molstar", "viewer", "cli", "molbo"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.scripts]
molbo = "molbo.cli:app"

[tool.hatch.build]
exclude = [
    "**/__pycache__/**",
    "**/*.pyc",
]

[tool.hatch.build.targets.wheel]
packages = ["src/molbo"]
include = [
    "src/molbo/viewer.html",
    "src/molbo/vendor/**/*",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[dependency-groups]
dev = [
    "pymdown-extensions>=10.21.2",
    "zensical>=0.0.33",
]
